syntax = "proto3";
package lend;

message LendRequest {
	int64 bookNumber = 1;
	int64 studentNumber = 2;
}

message LendResponse {
	int64 bookNumber = 1;
	int64 studentNumber = 2;
}

service LendService {
	rpc Lend (LendRequest)
		returns (LendResponse);
}
